Section 5: Docker Containerization complete. Needs testing.

--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -1,27 +1,39 @@
+```dockerfile
+# Dockerfile.ap
 FROM python:3.11-slim
 
+# 작업 디렉토리 설정
 WORKDIR /app
 
-# Install system dependencies
+# 시스템 의존성 설치
 RUN apt-get update && apt-get install -y \
     build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
+# 더 나은 캐싱을 위해 requirements 먼저 복사
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# 애플리케이션 코드 복사
 COPY src/ src/
 COPY configs/ configs/
 
-# Expose port
+# 모델과 로그를 위한 디렉토리 생성
+RUN mkdir -p models logs data/processed
+
+# 환경 변수 설정
+ENV PYTHONPATH=/app
+ENV MODEL_PATH=/app/models
+ENV LOG_LEVEL=INFO
+
+# 포트 노출
 EXPOSE 8000
 
-# Health check
+# 헬스 체크
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-# Run the application
+# 애플리케이션 실행
 CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+```
