--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,15 +2,15 @@
 -r requirements.txt
 
 # Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-pytest-mock>=3.11.0
+# pytest>=7.4.0
+# pytest-cov>=4.1.0
+# pytest-mock>=3.11.0
 
 # Code Quality
-black>=23.0.0
-flake8>=6.0.0
-isort>=5.12.0
-mypy>=1.5.0
+# black>=23.0.0
+# flake8>=6.0.0
+# isort>=5.12.0
+# mypy>=1.5.0
 
 # Jupyter
 jupyter>=1.0.0
@@ -18,5 +18,5 @@ jupyterlab>=4.0.0
 ipykernel>=6.25.0
 
 # Documentation
-sphinx>=7.0.0
-sphinx-rtd-theme>=1.3.0
+# sphinx>=7.0.0
+# sphinx-rtd-theme>=1.3.0
