--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+# version: '3.8'
 
 services:
   # MLflow 추적 서버
@@ -11,7 +11,9 @@ services:
       - ./mlruns:/mlruns
       - ./mlartifacts:/mlartifacts
     command: >
-      bash -c "pip install mlflow==2.8.1 &&
+      bash -c "
+               apt-get update && apt-get install -y curl netcat-traditional &&
+               pip install mlflow==2.8.1 &&
                mlflow server --host 0.0.0.0 --port 5000 
                --backend-store-uri sqlite:///mlruns/mlflow.db
                --default-artifact-root /mlartifacts"
