--- a/docker/monitoring/grafana/provisioning/dashboards/dashboard.yml
+++ b/docker/monitoring/grafana/provisioning/dashboards/dashboard.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: 1
 
 providers:
@@ -9,4 +10,4 @@ providers:
     updateIntervalSeconds: 10
     allowUiUpdates: true
     options:
-      path: /etc/grafana/provisioning/dashboards
+      path:  /etc/grafana/dashboards
