--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ scikit-learn>=1.1.0
 matplotlib>=3.5.0
 seaborn>=0.11.0
 
+# 환경 관리
+dotenv==0.9.9
 # 자연어 처리
 # nltk>=3.7
 
@@ -40,6 +42,11 @@ alembic>=1.8.0
 # 추가 유틸리티
 python-dotenv>=1.0.0
 requests>=2.28.0
+
+# 메트릭 수집 (Metrics Collection)
+prometheus-client>=0.19.0 # ~3MB   - Prometheus 메트릭 수집 (Section 6.1 필수)
+psutil>=5.9.6            # ~5MB   - 시스템 리소스 모니터링 (CPU, 메모리, 디스크)
+prometheus-fastapi-instrumentator==6.1.0
 
 # PyTorch 관련 추가 패키지
 # transformers>=4.21.0  # Hugging Face transformers (NLP용)
