--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,7 +1,3 @@
-
-
-
-
 # MLOps CI/CD Pipeline
 # Comprehensive automation for testing, building, and deployment
 name: MLOps CI/CD Pipeline
@@ -58,8 +54,10 @@ jobs:
     
     - name: Install dependencies
       run: |
+        echo "Installing dependencies..."
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # pip install -r requirements.txt
+        pip install -r requirements-resolved.txt # ✅ Exact versions
         pip install black flake8 pylint bandit safety mypy pytest-cov
     
     - name: Code formatting check (Black)
@@ -109,7 +107,7 @@ jobs:
     
     strategy:
       matrix:
-        python-version: ['3.10', '3.11']
+        python-version: ['3.11']
     
     steps:
     - name: Checkout code
@@ -123,7 +121,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        # pip install -r requirements.txt
+        pip install -r requirements-resolved.txt # ✅ Exact versions
         pip install pytest pytest-cov pytest-xdist pytest-mock
     
     - name: Create test data
@@ -207,7 +206,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install docker-compose
+    
     
     - name: Create test data
       run: |
@@ -257,7 +256,7 @@ jobs:
     - name: Start test stack
       run: |
         cd docker
-        docker-compose up -d
+        docker compose up -d
         sleep 30  # Wait for services to be ready
     
     - name: Integration test suite
@@ -278,7 +277,7 @@ jobs:
       if: always()
       run: |
         cd docker
-        docker-compose down --volumes --remove-orphans
+        docker compose down --volumes --remove-orphans
 
   # ===================================================================
   # 🐳 STAGE 2: Build & Registry
@@ -400,7 +399,7 @@ jobs:
         echo "Trainer Image: ${{ needs.build-and-push.outputs.trainer-image }}"
         
         # In a real scenario, this would deploy to staging infrastructure
-        # For example: kubectl, docker-compose, helm, terraform, etc.
+        # For example: kubectl, docker compose, helm, terraform, etc.
         
         # Simulate staging deployment
         echo "✅ Staging deployment completed"
