--- a/.github/workflows/section5-docker-test.yml
+++ b/.github/workflows/section5-docker-test.yml
@@ -391,7 +391,7 @@ jobs:
         "
     
     - name: Upload test artifacts
-      uses: actions/upload-artifact@v3
+      uses: codecov/codecov-action@v4
       if: always()
       with:
         name: section5-test-results
