--- a/docker/Dockerfile.train
+++ b/docker/Dockerfile.train
@@ -11,9 +11,9 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # 더 나은 캐싱을 위해 requirements 먼저 복사
-COPY requirements.txt .
-# RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install -r requirements.txt
+COPY requirements-resolved.txt .
+RUN pip install --no-cache-dir -r requirements-resolved.txt
+# RUN pip install -r requirements.txt
 
 # 애플리케이션 코드 복사
 COPY src/ src/
